--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -42,7 +42,7 @@
             "system-administrator": {
                 "header": "System Administrator",
                 "user-manage": "User manage",
-                "product-manage": "Package manage",
+                "user-redux": "User Redux manage",
                 "register-package-group-or-account": "Register service package for group/account"
             },
             "system-parameter": {
