completed AddUserRedux view + preview image (7/4/2023)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -37,7 +37,7 @@
         "address": "Address",
         "phone-number": "Phone Number",
         "gender": "Gender",
-        "position": "position",
+        "position": "Position",
         "image": "Avatar",
         "role": "Role",
         "save": "Save user"
