--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -50,5 +50,13 @@
         "chooseDoctor": "Chọn bác sĩ",
         "chooseDate": "Chọn ngày",
         "saveSchedule": "Lưu lịch khám"
+    },
+    "patient": {
+        "detail-doctor": {
+            "schedule": "Lịch khám",
+            "no-schedule": "Bác sĩ không có lịch hẹn trong ngày này",
+            "choose": "Chọn ",
+            "book-free": " và đặt miễn phí"
+        }
     }
 }
