updated new doctor information selection, new model (20/4/2023)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -58,5 +58,13 @@
             "choose": "Choose ",
             "book-free": " and book free"
         }
+    },
+    "admin": {
+        "manage-doctor": {
+            "title": "Create Doctor's Information",
+            "choose-doctor": "Choose Doctor",
+            "intro": "Doctor's Information",
+            "save-info": "Save Doctor's Information"
+        }
     }
 }
