completed DoctorInfo component + BookingModel view (22/4/2023)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -57,6 +57,12 @@
             "no-schedule": "This doctor does not have schedule on this day",
             "choose": "Choose ",
             "book-free": " and book free"
+        },
+        "extra-info": {
+            "address": "Address",
+            "price": "Price",
+            "more-details": "More details",
+            "hide-details": "Hide details"
         }
     },
     "admin": {
