--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -63,6 +63,19 @@
             "price": "Price",
             "more-details": "More details",
             "hide-details": "Hide details"
+        },
+        "booking-model": {
+            "header": "Booking a Schedule",
+            "price": "Price",
+            "fullName": "Full Name",
+            "phoneNumber": "Phone Number",
+            "address": "Address",
+            "email": "Email",
+            "gender": "Gender",
+            "birthday": "Birthday",
+            "reason": "Reason",
+            "book": "Book this schedule",
+            "cancel": "Cancel"
         }
     },
     "admin": {
