completed view after clicking link in email (26/4/2023)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -76,6 +76,10 @@
             "reason": "Reason",
             "book": "Book this schedule",
             "cancel": "Cancel"
+        },
+        "verify-booking": {
+            "success": "Verify booking successful",
+            "fail": "This appointment has been verified"
         }
     },
     "admin": {
