updated specialty choosing + clinic choosing in manage doctor detail view (28/4/2023)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -93,7 +93,9 @@
             "choose-province": "Province",
             "clinic-name": "Clinic Name",
             "clinic-address": "Clinic Address",
-            "note": "Note"
+            "note": "Note",
+            "specialty": "Choose Specialty",
+            "clinic": "Choose Clinic"
         }
     }
 }
