--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -93,7 +93,9 @@
             "choose-province": "Tỉnh thành",
             "clinic-name": "Tên phòng khám",
             "clinic-address": "Địa chỉ phòng khám",
-            "note": "Lưu ý"
+            "note": "Lưu ý",
+            "specialty": "Chọn chuyên khoa",
+            "clinic": "Chọn phòng khám"
         }
     }
 }
