completed detail clinic view + manage patient view (2/5/2023)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -26,7 +26,8 @@
             "manage-handbook": "Manage Handbook"
         },
         "doctor": {
-            "manage-schedule": "Manage Schedule"
+            "manage-schedule": "Manage Schedule",
+            "manage-patient": "Manage Patient"
         }
     },
     "manage-user-redux": {
